--- a/react/package.json
+++ b/react/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^16.10.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
