--- a/react/package.json
+++ b/react/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@types/node": "^16.10.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.27",
