--- a/redux-todo/package.json
+++ b/redux-todo/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/uuid": "^8.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.29",
