--- a/redux-todo/package.json
+++ b/redux-todo/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/uuid": "^8.3.1",
     "react": "^17.0.0",
