--- a/react-query-api/package.json
+++ b/react-query-api/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/styled": "^11.3.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.26.0"
