--- a/react-query-api/package.json
+++ b/react-query-api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@emotion/css": "^11.1.3",
     "@emotion/styled": "^11.3.0",
+    "axios": "^0.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.26.0"
