--- a/dynamic-container/package.json
+++ b/dynamic-container/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.14"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
