--- a/dynamic-container/package.json
+++ b/dynamic-container/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "js-yaml": "^4.1.0",
     "nodemon": "^2.0.14"
   },
   "scripts": {
