--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,14 +1,3 @@
-FROM node:alpine
-
-WORKDIR /app
-
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
-
-COPY . .
-
-RUN yarn build
-
-EXPOSE 3000
-
-CMD ["yarn", "start"]
+FROM nginx
+COPY nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
