--- a/try-mdx/package.json
+++ b/try-mdx/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.7",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
